--- a/index.html
+++ b/index.html
@@ -1,15 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
     <!-- CSS File link start -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- CSS File link end -->
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- --------------
+        Header Start
+    ---------------- -->
+    <header class="main-header">
+      <!-- Navigation Bar -->
+      <nav class="container">
+        <section class="navigation-bar">
+          <div class="company-name">
+            <h2>G3 Architects</h2>
+          </div>
+          <div class="menu">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact Us</a>
+            <a href="">Login</a>
+          </div>
+        </section>
+      </nav>
+      <!-- Banner  -->
+      <section class="banner-section">
+        <div class="container">
+          <div class="banner-content">
+            <h1 class="banner-title">
+              Brand New <br />
+              Group of Architects
+            </h1>
+            <p class="banner-description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn">Explore More</button>
+          </div>
+          <div class="banner-image">
+            <img src="./images/banner.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </header>
+    <!-- --------------------------------------
+        Header End and Main Container Start
+    --------------------------------------- -->
+    <main class="main-container">
+      <!-- Quick List section -->
+      <section class="container">
+        <div class="quick-list">
+          <div class="quick-list-images">
+            <div>
+              <img src="./images/team1.png" alt="" />
+            </div>
+            <div>
+              <img src="./images/team2.png" alt="" />
+            </div>
+            <div>
+              <img src="./images/team3.png" alt="" />
+            </div>
+            <div>
+              <img src="./images/team4.png" alt="" />
+            </div>
+          </div>
+          <div class="quick-list-content">
+            <h2 class="primary-title">
+              <span class="gray">Quick list</span>
+              of Our <br/><span class="primary-color">Features</span>
+            </h2>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn">Explore More</button>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
