added fearures section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="quick-list-content">
             <h2 class="primary-title">
               <span class="gray">Quick list</span>
-              of Our <br/><span class="primary-color">Features</span>
+              of Our <br /><span class="primary-color">Features</span>
             </h2>
             <p class="description">
               There are many variations of passages of Lorem Ipsum available,
@@ -82,6 +82,65 @@
             </p>
             <button class="btn">Explore More</button>
           </div>
+        </div>
+      </section>
+      <!-- feature section -->
+      <section class="container">
+        <div class="features">
+          <div class="feature-content">
+            <h2 class="primary-title ">
+              Features you will <br />
+              love & enjoy
+            </h2>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <div class="articles">
+              <article class="article">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </article>
+              <article class="article">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </article>
+              <article class="article">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </article>
+              <article class="article">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised...........
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="feature-image">
+            <img src="./images/architect.png" alt="" />
+          </div>
+        </div>
+        <div  class="year">
+            <div>
+                <h1>10+Year</h1>
+                <p>Experience</p>
+            </div>
         </div>
       </section>
     </main>
