added some facts section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <section class="container">
         <div class="features">
           <div class="feature-content">
-            <h2 class="primary-title ">
+            <h2 class="primary-title">
               Features you will <br />
               love & enjoy
             </h2>
@@ -136,11 +136,39 @@
             <img src="./images/architect.png" alt="" />
           </div>
         </div>
-        <div  class="year">
-            <div>
-                <h1>10+Year</h1>
-                <p>Experience</p>
-            </div>
+        <div class="year">
+          <h1>10+Year</h1>
+          <p>Experience</p>
+        </div>
+      </section>
+      <!-- Some Facts Section -->
+      <section class="container">
+        <h2 class="primary-title">Some Facts</h2>
+        <p class="description">
+          There are many variations of passages of Lorem Ipsum available, <br />
+          but the majority have suffered alteration.
+        </p>
+        <div class="some-facts-items">
+          <div class="item">
+            <img src="./images/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="item">
+            <img src="./images/icons/projects.png" alt="" />
+            <h3>1458</h3>
+            <p>Project Finished</p>
+          </div>
+          <div class="item">
+            <img src="./images/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <p>Clients Worked</p>
+          </div>
+          <div class="item">
+            <img src="./images/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <p>Email Send</p>
+          </div>
         </div>
       </section>
     </main>
