--- a/index.html
+++ b/index.html
@@ -141,6 +141,41 @@
           <p>Experience</p>
         </div>
       </section>
+      <!-- contact section -->
+      <section class="container contact-container">
+        <h2 class="primary-title">DON’T HESITATE TO CONTACT...!</h2>
+        <div class="form-content">
+          <div class="form-box-1">
+            <form action="#" class="form-container">
+              <input
+                class="input"
+                type="text"
+                name=""
+                id=""
+                placeholder="Your Name"
+              /><br />
+              <input
+                class="input"
+                type="email"
+                name=""
+                id=""
+                placeholder="Your Email"
+              /><br />
+              <textarea
+                class="input textarea"
+                name=""
+                placeholder="Write Message"
+              ></textarea
+              ><br />
+              <input class="btn" type="submit" value="Submit" />
+              <input class="btn" type="reset" value="Reset" />
+            </form>
+          </div>
+          <div class="form-box-2">
+            <img src="./images/word2.e12fce5eb48b7d20bf80.gif" alt="" />
+          </div>
+        </div>
+      </section>
       <!-- Some Facts Section -->
       <section class="container">
         <h2 class="primary-title">Some Facts</h2>
@@ -171,6 +206,43 @@
           </div>
         </div>
       </section>
+
+      <!-- Sponsors Section -->
+      <section class="container">
+        <div class="sponsor-header">
+          <h2 class="primary-title">Our Sponsors</h2>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available,
+            <br />
+            but the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsor-logos">
+          <div class="sponsor-logo">
+            <img src="./images/sponsors/amazon.png" alt="" />
+          </div>
+          <div class="sponsor-logo">
+            <img src="./images/sponsors/figma.png" alt="" />
+          </div>
+          <div class="sponsor-logo">
+            <img src="./images/sponsors/google.png" alt="" />
+          </div>
+          <div class="sponsor-logo">
+            <img src="./images/sponsors/spotify.png" alt="" />
+          </div>
+          <div class="sponsor-logo">
+            <img src="./images/sponsors/telerama.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- --------------------------------------
+        Main container End and footer start
+    ------------------------------------------ -->
+    <footer class="footer">
+      <div class="container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+      </div>
+    </footer>
   </body>
 </html>
