added mobile device

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
       </section>
       <!-- Some Facts Section -->
-      <section class="container">
+      <section class="container some-container">
         <h2 class="primary-title">Some Facts</h2>
         <p class="description">
           There are many variations of passages of Lorem Ipsum available, <br />
